# PasteIt

./: .gitignore  Cargo.toml  README.md  clipboard_history.db  install.sh  warning.txt
src/: daemon.rs  database.rs  main.rs  paste_handler.rs  style.css  ui.rs
