[package]
name = "paste-it"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = "0.7.3"
gdk4 = "0.7.3"
gio = "0.18"
rusqlite = "0.29"
sha2 = "0.10"
image = { version = "0.24.7", default-features = false, features = ["png", "jpeg"] }
chrono = "0.4"
hex = "0.4"
anyhow = "1.0"
x11 = "2.21"
libc = "0.2"
rayon = "1.8"
gdk-pixbuf = "0.18"

[profile.release]
opt-level = 3
lto = false
codegen-units = 1
panic = 'abort'
